# nmpc_px4_ros2

./: .gitmodules  Dockerfile  LICENSE  README.md
nmpc_px4_ros2/: CMakeLists.txt  package.xml
nmpc_px4_ros2/config/rviz/: config.rviz
nmpc_px4_ros2/config/traj/: spiral.txt
nmpc_px4_ros2/hooks/: env_var.dsv.in
nmpc_px4_ros2/include/nmpc_px4_ros2/: nmpc_flight_mode_node.hpp  nmpc_px4_ros2_node.hpp
nmpc_px4_ros2/scripts/: acados_ocp.json  flight_trajectory_generator.ipynb  nmpc_flight_mode.ipynb  nmpc_flight_mode.py  trajectory_generator.py
nmpc_px4_ros2/scripts/c_generated_code/: Makefile  acados_sim_solver_nmpc_flight_mode.c  acados_sim_solver_nmpc_flight_mode.h  acados_solver.pxd  acados_solver_nmpc_flight_mode.c  acados_solver_nmpc_flight_mode.h  main_nmpc_flight_mode.c  main_sim_nmpc_flight_mode.c
nmpc_px4_ros2/scripts/c_generated_code/nmpc_flight_mode_model/: nmpc_flight_mode_expl_ode_fun.c  nmpc_flight_mode_expl_vde_adj.c  nmpc_flight_mode_expl_vde_forw.c  nmpc_flight_mode_model.h
nmpc_px4_ros2/src/: main.cpp  nmpc_flight_mode_node.cpp  reference_trajectory_pub_node.cpp
nmpc_px4_ros2_bringup/: CMakeLists.txt  package.xml
nmpc_px4_ros2_bringup/config/: nmpc_params.yaml  ref_traj_params.yaml  state_est_params.yaml
nmpc_px4_ros2_bringup/launch/: bringup.launch.py
nmpc_px4_ros2_bringup/rviz/: config.rviz
nmpc_px4_ros2_interfaces/: CMakeLists.txt  package.xml
nmpc_px4_ros2_interfaces/msg/: StateTrajectory.msg
nmpc_px4_ros2_utils/: CMakeLists.txt  package.xml
nmpc_px4_ros2_utils/config/traj/: circle.txt  eight.txt  static.txt  straight_line.txt
nmpc_px4_ros2_utils/include/nmpc_px4_ros2_utils/: odometry_republisher.hpp  utils.hpp
nmpc_px4_ros2_utils/src/: external_state_estimation_node.cpp  odometry_republisher_node.cpp  reference_trajectory_node.cpp  utils.cpp
