<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nmpc_px4_ros2_bringup</name>
  <version>0.0.1</version>
  <description>Package that contains bringup launch files that run the various nodes needed for NMPC PX4 ROS2 control of drones</description>
  <maintainer email="kousheekc@gmail.com">Kousheek Chakraborty</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ros2launch</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
